--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,15 +7,26 @@ extremity-error = [scarlet]Your Extremity version does not match the host's vers
 extremity-fail = [scarlet]Failed to fetch the host's difficulty setting, issues may occur!\n[lightgray]Try rejoining to potentially resolve this issue.
 extremity-success = [lime]Successfully fetched the host's settings, set difficulty to @!
 
-# Difficulty names, ranging from -1 (error) to 3
+# Difficulty names, ranging from -1 (error) to 7
 extremity-diff-1 = [stat]Error[]
 extremity-diff0 = [lime]Vanilla[]
 extremity-diff1 = [yellow]Mediocrity[]
 extremity-diff2 = [orange]Fatality[]
 extremity-diff3 = [scarlet]True Extremity[]
+extremity-diff4 = [#c40004]High Mediocrity[]
+extremity-diff5 = [#cf0078]Prime Fatality[]
+extremity-diff6 = [#a000ba]Peak Extremity[]
+extremity-diff7 = [#45015f]Real Insanity[]
 
 # A welcome message for the host, sent when the world is loaded
 extremity-welcome = [accent]Welcome.\n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\nYou can change it in settings, however you'll have to reload the map for changes to apply!
+
+# First boot welcome message of the mod - split into a few parts cause it really is long
+extremity-info = [accent]Welcome to Extremity![]\
+  \n\nThis mod attempts to make Mindustry [scarlet]harder[] without modifying or adding any content, instead, it runs custom behavior code on various events.\
+  \n\nPlease note that [accent]Extremity[] is a bit on the heavier side of mods, therefore a decent device is recommended in order to play.\
+  \nWeak devices may experience performance issues, bugs or even crashes!\
+  \n\nHead over to the settings in order to set [accent]Extremity[] up, good luck!
 
 # Buttons
 extremity-load = Load
@@ -45,6 +56,11 @@ extremity-removed = Save deleted!
 extremity-category = Extremity
 setting.extremity-difficulty.name = Difficulty
 setting.extremity-difficulty.description = Sets the difficulty for the next loaded map\nDoes not change the difficulty set for the ongoing map unless the map is reloaded
+setting.extremity-beyond.name = Beyond Extreme
+setting.extremity-beyond.description = Enables the Extremity Beyond mode, greatly increasing the difficulty\n[scarlet]!! This setting cannot be changed afterwards, however it'll reset upon losing a game !!
+setting.extremity-beyond.confirm = [scarlet]Caution[], losing a campaign sector while Extremity Beyond mode is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
+  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or cancel the change to Beyond mode.[]\
+  \n\n[lightgray]Beyond Mode as well as other difficulty related settings automatically reset to default values upon losing any game!
 setting.extremity-pvp.name = Run on PvP
 setting.extremity-pvp.description = If enabled, the mod will run even if hosting PvP\nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
 setting.extremity-rows.name = Entry Row Amount
