--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -19,7 +19,7 @@ extremity-diff6 = [#a000ba]Peak Extremity[]
 extremity-diff7 = [#45015f]Real Insanity[]
 
 # A welcome message for the host, sent when the world is loaded
-extremity-welcome = [accent]Welcome.\n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\nYou can change it in settings, however you'll have to reload the map for changes to apply!
+extremity-welcome = [accent]Welcome.\n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\nYou can change it in settings, however you'll have to reload the map for changes to apply!\nTo view the tutorial, use /extremity
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
@@ -27,6 +27,42 @@ extremity-info = [accent]Welcome to Extremity![]\
   \n\nPlease note that [accent]Extremity[] is a bit on the heavier side of mods, therefore a decent device is recommended in order to play.\
   \nWeak devices may experience performance issues, bugs or even crashes!\
   \n\nHead over to the settings in order to set [accent]Extremity[] up, good luck!
+
+# Clientside tutorial stuff
+extremity-tutorial1-title = Welcome!
+extremity-tutorial1 = [accent]Welcome to Extremity's Tutorial[]\
+  \nWe'll shortly cover all the things added by Extremity on every level of difficulty\
+  \n\nIf a difficulty level has no tutorial entries, it doesn't add any new mechanics, only scales them up!
+extremity-tutorial2-title = [yellow]Mediocrity[]
+extremity-tutorial2 = Being the lowest difficulty level, [yellow]Mediocrity[] introduces quite a few new mechanics\
+  \n\nDying enemy units spawn other units according to the provided unitdex\
+  \nWeathers affect buildings:\
+  \nSandstorms slow down conveyors\
+  \nSnow slows down every building\
+  \nRain damages buildings over time unless they're under \uF898Force Projectors
+extremity-tutorial3-title = [orange]Fatality[]
+extremity-tutorial3 = [orange]Fatality[] raises the bar by scaling up the previous mechanics & adding a few new ones\
+  \n\nEnemy units now get the \uF678Fast status effect\
+  \nAlly units get \uF7A6Corroded if \uF7B2Wet\
+  \nTurrets require coolant to operate, without it, they will explode after a few shots\
+  \nBuildings near the drop zone get damaged each wave
+extremity-tutorial4-title = [scarlet]True Extremity[]
+extremity-tutorial4 = As the hardest "fair" difficulty level, [scarlet]True Extremity[] brings a real challenge\
+  \n\nAlly units \uF7B3Slow down\
+  \nEnemy \uF7A9Guradians give \uF7AAShielded to all nearby enemies upon death
+extremity-tutorial5-title = [#c40004]High Mediocrity[]
+extremity-tutorial5 = Entering [scarlet]Beyond Mode[], [#c40004]High Mediocrity[] brings victory chances quite low, scaling stuff up a lot\
+  \n\nAlly bullets have lifetime damage scaling, making them weak at first\n\uF898Force Projectors no longer protect against rain\
+  \n[scarlet]Upon losing a sector, the entire campaign of the current planet gets reset
+extremity-tutorial6-title = [#cf0078]Prime Fatality[]
+extremity-tutorial6 = [#cf0078]Prime Fatality[] introduces the final, most cruel mechanic\
+  \n\nLosing a single core causes every other core to explode
+extremity-tutorial7-title = The End
+extremity-tutorial7 = [accent]Congrats![]\
+  \nYou've reached the end of the tutorial, well done!\
+  \nHope this brief content introduction was clear enough\
+  \n\n[lightgray]Remember that the mod allows you to customize certain factors, such as the unitdexes![]\
+  \n\nEnjoy the mod!
 
 # Buttons
 extremity-load = Load
