--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -49,7 +49,8 @@ extremity-tutorial3 = [orange]Fatality[] raises the bar by scaling up the previo
 extremity-tutorial4-title = [scarlet]True Extremity[]
 extremity-tutorial4 = As the hardest "fair" difficulty level, [scarlet]True Extremity[] brings a real challenge\
   \n\nAlly units \uF7B3Slow down\
-  \nEnemy \uF7A9Guradians give \uF7AAShielded to all nearby enemies upon death
+  \nEnemy \uF7A9Guradians give \uF7AAShielded to all nearby enemies upon death\
+  \nThe enemy can attack random captured sectors, even ones without a base nearby
 extremity-tutorial5-title = [#c40004]High Mediocrity[]
 extremity-tutorial5 = Entering [scarlet]Beyond Mode[], [#c40004]High Mediocrity[] brings victory chances quite low, scaling stuff up a lot\
   \n\nAlly bullets have lifetime damage scaling, making them weak at first\n\uF898Force Projectors no longer protect against rain\
