--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,7 +4,8 @@ extremity-outdated = [scarlet]A player with newer version of Extremity has joine
 extremity-error = [scarlet]Your Extremity version does not match the host's version, issues may occur! [lightgray](Yours: [orange]v@[], Theirs: [orange]v@[])
 
 # Responses used by the networking code
-extremity-fail = [scarlet]Failed to fetch the host's difficulty setting, issues may occur!\n[lightgray]Try rejoining to potentially resolve this issue.
+extremity-fail = [scarlet]Failed to fetch the host's difficulty setting, issues may occur!\
+  \n[lightgray]Try rejoining to potentially resolve this issue.
 extremity-success = [lime]Successfully fetched the host's settings, set difficulty to @!
 
 # Difficulty names, ranging from -1 (error) to 7
@@ -19,7 +20,10 @@ extremity-diff6 = [#a000ba]Peak Extremity[]
 extremity-diff7 = [#45015f]Real Insanity[]
 
 # A welcome message for the host, sent when the world is loaded
-extremity-welcome = [accent]Welcome.\n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\nYou can change it in settings, however you'll have to reload the map for changes to apply!\nTo view the tutorial, use /extremity
+extremity-welcome = [accent]Welcome.\
+  \n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\
+  \nYou can change it in settings, however you'll have to reload the map for changes to apply!\
+  \nTo view the tutorial, use /extremity
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
@@ -92,13 +96,24 @@ extremity-removed = Save deleted!
 # Settings stuff
 extremity-category = Extremity
 setting.extremity-difficulty.name = Difficulty
-setting.extremity-difficulty.description = Sets the difficulty for the next loaded map\nDoes not change the difficulty set for the ongoing map unless the map is reloaded
+setting.extremity-difficulty.description = Sets the difficulty for the next loaded map\
+  \nDoes not change the difficulty set for the ongoing map unless the map is reloaded
 setting.extremity-beyond.name = Beyond Extreme
-setting.extremity-beyond.description = Enables the Extremity Beyond mode, greatly increasing the difficulty\n[scarlet]!! This setting cannot be changed afterwards, however it'll reset upon losing a game !!
-setting.extremity-beyond.confirm = [scarlet]Caution[], losing a campaign sector while Extremity Beyond mode is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
+setting.extremity-beyond.description = Enables the Extremity Beyond mode, greatly increasing the difficulty\
+  \n[scarlet]!! This setting cannot be changed afterwards, however it'll reset upon losing a game !!
+setting.extremity-beyond.confirm = [scarlet]Caution[], losing a campaign sector while Extremity Beyond is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
   \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or cancel the change to Beyond mode.[]\
   \n\n[lightgray]Beyond Mode as well as other difficulty related settings automatically reset to default values upon losing any game!
+setting.extremity-one-life.name = Single Life Campaign
+setting.extremity-one-life.description = Enables the single life mode seen in Extremity Beyond on any difficulty\
+  \n[scarlet]!! Works even if difficulty's set to vanilla !!
+setting.extremity-one-life.confirm = [scarlet]Caution[], losing a campaign sector while this setting is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
+  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
+  \n\n[scarlet]Be aware that this option disregards the difficulty level, therefore it works even if the mod's set to vanilla.
 setting.extremity-pvp.name = Run on PvP
-setting.extremity-pvp.description = If enabled, the mod will run even if hosting PvP\nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
+setting.extremity-pvp.description = If enabled, the mod will run even if hosting PvP\
+  \nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
 setting.extremity-rows.name = Entry Row Amount
-setting.extremity-rows.description = Sets the amount of entry rows in the Unitdex Editor\nPlease note that Unitdex Editor is currently highly experimental\nChanging this setting may cause minor ui clipping issues
+setting.extremity-rows.description = Sets the amount of entry rows in the Unitdex Editor\
+  \nPlease note that Unitdex Editor is currently highly experimental\
+  \nChanging this setting may cause minor ui clipping issues
