slightly better editor

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -73,16 +73,17 @@ extremity-tutorial7 = [accent]Congrats![]\
 extremity-load = Load
 extremity-save = Save
 extremity-reset = Reset
+extremity-clear = Clear
 extremity-remove = Remove
 extremity-export = Copy to clipboard
 extremity-import = Import from clipboard
 extremity-unitdex-button = Open Unitdex Editor
 extremity-new-entry = Add Entry
 
-# Dialogs
+# Unitdex editor
 extremity-unitdex = Unitdex Editor
-
-# Other UI
+extremity-confirm-clear = You're about to clear the current unitdex, are you sure?
+extremity-overwrite = Save with this name already exists, saving now will overwrite it!
 extremity-select = Please select the save
 extremity-no-saves = No unitdex saves found
 extremity-save-name = Enter unitdex save name
