--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,26 +4,12 @@ extremity-outdated = [scarlet]A player with newer version of Extremity has joine
 extremity-error = [scarlet]Your Extremity version does not match the host's version, issues may occur! [lightgray](Yours: [orange]v@[], Theirs: [orange]v@[])
 
 # Responses used by the networking code
-extremity-fail = [scarlet]Failed to fetch the host's difficulty setting, issues may occur!\
-  \n[lightgray]Try rejoining to potentially resolve this issue.
-extremity-success = [lime]Successfully fetched the host's settings, set difficulty to @!
-
-# Difficulty names, ranging from -1 (error) to 7
-extremity-diff-1 = [stat]Error[]
-extremity-diff0 = [lime]Vanilla[]
-extremity-diff1 = [yellow]Mediocrity[]
-extremity-diff2 = [orange]Fatality[]
-extremity-diff3 = [scarlet]True Extremity[]
-extremity-diff4 = [#c40004]High Mediocrity[]
-extremity-diff5 = [#cf0078]Prime Fatality[]
-extremity-diff6 = [#a000ba]Peak Extremity[]
-extremity-diff7 = [#45015f]Real Insanity[]
+extremity-success = [lime]Received new Extremity setting data from the host, applying!
 
 # A welcome message for the host, sent when the world is loaded
-extremity-welcome = [accent]Welcome.\
-  \n\nCurrent [scarlet]Extremity[] difficulty is @[accent]!\
-  \nYou can change it in settings, however you'll have to reload the map for changes to apply!\
-  \nTo view the tutorial, use /extremity
+extremity-welcome = [accent]Hi there!\
+  \nThis is a reminder that Extremity's custom difficulty settings may be active\
+  \nHead to the settings if you wish to change the config / disable Extremity
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
@@ -31,43 +17,6 @@ extremity-info = [accent]Welcome to Extremity![]\
   \n\nPlease note that [accent]Extremity[] is a bit on the heavier side of mods, therefore a decent device is recommended in order to play.\
   \nWeak devices may experience performance issues, bugs or even crashes!\
   \n\nHead over to the settings in order to set [accent]Extremity[] up, good luck!
-
-# Clientside tutorial stuff
-extremity-tutorial1-title = Welcome!
-extremity-tutorial1 = [accent]Welcome to Extremity's Tutorial[]\
-  \nWe'll shortly cover all the things added by Extremity on every level of difficulty\
-  \n\nIf a difficulty level has no tutorial entries, it doesn't add any new mechanics, only scales them up!
-extremity-tutorial2-title = [yellow]Mediocrity[]
-extremity-tutorial2 = Being the lowest difficulty level, [yellow]Mediocrity[] introduces quite a few new mechanics\
-  \n\nDying enemy units spawn other units according to the provided unitdex\
-  \nWeathers affect buildings:\
-  \nSandstorms slow down conveyors\
-  \nSnow slows down every building\
-  \nRain damages buildings over time unless they're under \uF898Force Projectors
-extremity-tutorial3-title = [orange]Fatality[]
-extremity-tutorial3 = [orange]Fatality[] raises the bar by scaling up the previous mechanics & adding a few new ones\
-  \n\nEnemy units now get the \uF678Fast status effect\
-  \nAlly units get \uF7A6Corroded if \uF7B2Wet\
-  \nTurrets require coolant to operate, without it, they will explode after a few shots\
-  \nBuildings near the drop zone get damaged each wave
-extremity-tutorial4-title = [scarlet]True Extremity[]
-extremity-tutorial4 = As the hardest "fair" difficulty level, [scarlet]True Extremity[] brings a real challenge\
-  \n\nAlly units \uF7B3Slow down\
-  \nEnemy \uF7A9Guradians give \uF7AAShielded to all nearby enemies upon death\
-  \nThe enemy can attack random captured sectors, even ones without a base nearby
-extremity-tutorial5-title = [#c40004]High Mediocrity[]
-extremity-tutorial5 = Entering [scarlet]Beyond Mode[], [#c40004]High Mediocrity[] brings victory chances quite low, scaling stuff up a lot\
-  \n\nAlly bullets have lifetime damage scaling, making them weak at first\n\uF898Force Projectors no longer protect against rain\
-  \n[scarlet]Upon losing a sector, the entire campaign of the current planet gets reset
-extremity-tutorial6-title = [#cf0078]Prime Fatality[]
-extremity-tutorial6 = [#cf0078]Prime Fatality[] introduces the final, most cruel mechanic\
-  \n\nLosing a single core causes every other core to explode
-extremity-tutorial7-title = The End
-extremity-tutorial7 = [accent]Congrats![]\
-  \nYou've reached the end of the tutorial, well done!\
-  \nHope this brief content introduction was clear enough\
-  \n\n[lightgray]Remember that the mod allows you to customize certain factors, such as the unitdexes![]\
-  \n\nEnjoy the mod!
 
 # Buttons
 extremity-load = Load
@@ -96,24 +45,42 @@ extremity-removed = Save deleted!
 
 # Settings stuff
 extremity-category = Extremity
-setting.extremity-difficulty.name = Difficulty
-setting.extremity-difficulty.description = Sets the difficulty for the next loaded map\
-  \nDoes not change the difficulty set for the ongoing map unless the map is reloaded
-setting.extremity-beyond.name = Beyond Extreme
-setting.extremity-beyond.description = Enables the Extremity Beyond mode, greatly increasing the difficulty\
-  \n[scarlet]!! This setting cannot be changed afterwards, however it'll reset upon losing a game !!
-setting.extremity-beyond.confirm = [scarlet]Caution[], losing a campaign sector while Extremity Beyond is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
-  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or cancel the change to Beyond mode.[]\
-  \n\n[lightgray]Beyond Mode as well as other difficulty related settings automatically reset to default values upon losing any game!
-setting.extremity-one-life.name = Single Life Campaign
-setting.extremity-one-life.description = Enables the single life mode seen in Extremity Beyond on any difficulty\
-  \n[scarlet]!! Works even if difficulty's set to vanilla !!
-setting.extremity-one-life.confirm = [scarlet]Caution[], losing a campaign sector while this setting is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
-  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
-  \n\n[scarlet]Be aware that this option disregards the difficulty level, therefore it works even if the mod's set to vanilla.
+setting.extremity-difficulty.name = Difficulty Scale
+setting.extremity-difficulty.description = Sets the difficulty scale
 setting.extremity-pvp.name = Run on PvP
 setting.extremity-pvp.description = If enabled, the mod will run even if hosting PvP\
   \nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
+setting.extremity-turrets.name = Turrets Require Coolant
+setting.extremity-turrets.description = Whether turrets require coolant to operate\
+  \nTurrets without coolant will become damaged upon shooting
+setting.extremity-enemies.name = Fast Enemies
+setting.extremity-enemies.description = Gives all enemy units the fast status effect\
+  \nDisabled on PvP games
+setting.extremity-allies.name = Slow Allies
+setting.extremity-allies.description = Gives all allied units the slow status effect\
+  \nDisabled on PvP games
+setting.extremity-campaign.name = Single Life Campaign
+setting.extremity-campaign.description = Resets the campaign progress if a sector is lost
+setting.extremity-campaign.confirm = [scarlet]Caution[], losing a campaign sector while this setting is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
+  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
+  \n\n[scarlet]Be aware that this option disregards the difficulty level, therefore it works even if the mod's set to vanilla.
+setting.extremity-explosions.name = Enhanced Turret Explosions
+setting.extremity-explosions.description = Whether to simulate turret explosions the same way inventory-based buildings have it done
+setting.extremity-cores.name = Vulnerable Cores
+setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core\
+  \nDisabled on PvP games
+setting.extremity-weather.name = Weather Interactions
+setting.extremity-weather.description = Enables interactions between the world and the weather, such as units corroding when wet
+setting.extremity-buildings.name = Weather Affects Buildings
+setting.extremity-buildings.description = Expands the interactions to also affect buildings\
+  \nDisabled on PvP games
+setting.extremity-bullets.name = Scaled Bullets
+setting.extremity-bullets.description = Change the damage output of a bullet based on it's remaining lifetime
+setting.extremity-invasions.name = Extra Invasions
+setting.extremity-invasions.description = Whether to make enemy factions extra aggressive in the campaign\
+  \nPlease note that this setting may have unintended behavior in certain scenarios
+setting.extremity-zones.name = Expanded Drop Zones
+setting.extremity-zones.description = Whether to damage buildings nearby to drop zones on each wave
 setting.extremity-rows.name = Entry Row Amount
 setting.extremity-rows.description = Sets the amount of entry rows in the Unitdex Editor\
   \nPlease note that Unitdex Editor is currently highly experimental\
