--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ repositories{
 
     maven{ url "https://maven.xpdustry.com/mindustry" }
     maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
-    maven{ url 'https://www.jitpack.io' }
+    maven{ url "https://www.jitpack.io" }
 }
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v149'
+    mindustryVersion = "v151.1"
     jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
