--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -48,19 +48,21 @@ extremity-category = Extremity
 setting.extremity-difficulty.name = Difficulty Scale
 setting.extremity-difficulty.description = Sets the difficulty scale
 setting.extremity-pvp.name = Run on PvP
-setting.extremity-pvp.description = If enabled, the mod will run even if hosting PvP\
+setting.extremity-pvp.description = Whether the mod should run even if hosting PvP\
   \nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
 setting.extremity-turrets.name = Turrets Require Coolant
 setting.extremity-turrets.description = Whether turrets require coolant to operate\
   \nTurrets without coolant will become damaged upon shooting
+setting.extremity-guardian.name = Dangerous Guardians
+setting.extremity-guardian.description = Whether guardian units should give nearby units the shielded status effect 
 setting.extremity-enemies.name = Fast Enemies
-setting.extremity-enemies.description = Gives all enemy units the fast status effect\
+setting.extremity-enemies.description = Whether to give all enemy units the fast status effect\
   \nDisabled on PvP games
 setting.extremity-allies.name = Slow Allies
-setting.extremity-allies.description = Gives all allied units the slow status effect\
+setting.extremity-allies.description = Whether to give all allied units the slow status effect\
   \nDisabled on PvP games
 setting.extremity-campaign.name = Single Life Campaign
-setting.extremity-campaign.description = Resets the campaign progress if a sector is lost
+setting.extremity-campaign.description = Whether to reset the campaign progress if a sector is lost
 setting.extremity-campaign.confirm = [scarlet]Caution[], losing a campaign sector while this setting is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
   \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
   \n\n[scarlet]Be aware that this option disregards the difficulty level, therefore it works even if the mod's set to vanilla.
@@ -70,12 +72,12 @@ setting.extremity-cores.name = Vulnerable Cores
 setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core\
   \nDisabled on PvP games
 setting.extremity-weather.name = Weather Interactions
-setting.extremity-weather.description = Enables interactions between the world and the weather, such as units corroding when wet
+setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding when wet
 setting.extremity-buildings.name = Weather Affects Buildings
-setting.extremity-buildings.description = Expands the interactions to also affect buildings\
+setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings\
   \nDisabled on PvP games
 setting.extremity-bullets.name = Scaled Bullets
-setting.extremity-bullets.description = Change the damage output of a bullet based on it's remaining lifetime
+setting.extremity-bullets.description = Whether to change the damage output of a bullet based on it's remaining lifetime
 setting.extremity-invasions.name = Extra Invasions
 setting.extremity-invasions.description = Whether to make enemy factions extra aggressive in the campaign\
   \nPlease note that this setting may have unintended behavior in certain scenarios
