yet another update

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -69,12 +69,13 @@ setting.extremity-campaign.confirm = [scarlet]Caution[], losing a campaign secto
 setting.extremity-explosions.name = Enhanced Turret Explosions
 setting.extremity-explosions.description = Whether to simulate turret explosions the same way inventory-based buildings have it done
 setting.extremity-cores.name = Vulnerable Cores
-setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core\
-  \nDisabled on PvP games
+setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core
 setting.extremity-weather.name = Weather Interactions
-setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding when wet
+setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding if wet
 setting.extremity-buildings.name = Weather Affects Buildings
-setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings\
+setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings
+setting.extremity-damage.name = Weather Damages Buildings
+setting.extremity-damage.description = Whether certain interactions should damage buildings\
   \nDisabled on PvP games
 setting.extremity-bullets.name = Scaled Bullets
 setting.extremity-bullets.description = Whether to change the damage output of a bullet based on it's remaining lifetime
