--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -10,6 +10,9 @@ extremity-success = [lime]Received new Extremity setting data from the host, app
 extremity-welcome = [accent]Hi there!\
   \nThis is a reminder that Extremity's custom difficulty settings may be active\
   \nHead to the settings if you wish to change the config / disable Extremity
+net.extremity-welcome = [accent]Welcome!\
+  \n[lightgray]The host's running [scarlet]Extremity[], a difficulty enhancing mod by [green]W[orange]M[brown]F[][][]!\
+  \nConsider installing the mod to reduce certain desyncs!
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
@@ -88,3 +91,45 @@ setting.extremity-rows.name = Entry Row Amount
 setting.extremity-rows.description = Sets the amount of entry rows in the Unitdex Editor\
   \nPlease note that Unitdex Editor is currently highly experimental\
   \nChanging this setting may cause minor ui clipping issues
+
+# List UI
+list.extremity-modifiers-begin = --- [ [accent]Modifiers[] ] ---
+list.extremity-modifiers-end = --- [ Page @/@ ] ---
+
+# Command feedback
+cmd.extremity-difficulty = [accent][Extremity][] Current difficulty scale is @
+cmd.extremity-insufficient = [accent][Extremity][scarlet] Insufficient permissions.
+cmd.extremity-reset = [accent][Extremity][] Reset unitdex to default values!
+cmd.extremity-submitted = [accent][Extremity][] Submitted new unitdex!
+cmd.extremity-ready = [[accent][Extremity][] Saved unitdex data in cache\nType [accent]/unitdex submit[] to apply when ready!
+
+# Console feedback
+con.extremity-difficulty = Current difficulty scale is @
+con.extremity-difficulty-set = Set difficulty scale to @
+con.extremity-applied = Applied new unitdex
+
+# Vote feedback
+vote.extremity-ongoing = [accent][Extremity][scarlet] A vote is already in progress, please wait before it finishes!
+vote.extremity-no-session = [accent][Extremity][scarlet] No vote session ongoing, please start one before voting!
+vote.extremity-denied = [accent][Extremity][scarlet] You have already voted!
+vote.extremity-time.difficulty = [accent][Extremity][] @ seconds remaining!\nVote using /diffvote (y/n)
+vote.extremity-invalid.difficulty = [accent][Extremity][] [scarlet]Invalid parameter, please type /difficulty <0-10> to start a vote or <yes/y>/<no/n> to vote!
+vote.extremity-cancelled.difficulty = [accent][Extremity][] Initiator has cancelled the difficulty vote.
+vote.extremity-cancelled-admin.difficulty = [accent][Extremity][] Difficulty vote was cancelled by @
+vote.extremity-skip.difficulty = [accent][Extremity][] Difficulty vote force-passed by @
+vote.extremity-voted.difficulty = @ [white] voted [lime]in favor of[] changing the difficulty scale to @ (@/@)\nVote using /diffvote (y/n)
+vote.extremity-voted-against.difficulty = @ [white] voted [scarlet]against[] changing the difficulty scale to @ (@/@)\nVote using /diffvote (y/n)
+vote.extremity-success.difficulty = [accent][Extremity][] Difficultly change vote passed, setting difficulty scale to @!
+vote.extremity-fail.difficulty = [accent][Extremity][] Difficulty change vote failed.
+vote.extremity-time.modifier = [accent][Extremity][] @ seconds remaining!\nVote using /modifier (y/n)
+vote.extremity-invalid.modifier = [accent][Extremity][scarlet] Invalid parameter, please type /modifier (yes/y / no/n) in order to vote!
+vote.extremity-cancelled.modifier = [accent][Extremity][] Initiator has cancelled the modifier vote.
+vote.extremity-cancelled-admin.modifier = [accent][Extremity][] Modifier vote was cancelled by @
+vote.extremity-skip.modifier = [accent][Extremity][] Modifier vote force-passed by @
+vote.extremity-voted.modifier = @ [white] voted [lime]in favor of[] enabling [accent]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted.modifier-disable = @ [white] voted [lime]in favor of[] disabling [accent]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted-against.modifier = @ [white] voted [scarlet]against[] enabling [accent]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted-against.modifier-disable = @ [white] voted [scarlet]against[] disabling [accent]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-success.modifier-enable = [accent][Extremity][] Modifier vote passed, enabling [accent]@[]!
+vote.extremity-success.modifier-disable = [accent][Extremity][] Modifier vote passed, disabling [accent]@[]!
+vote.extremity-fail.modifier = [accent][Extremity][] Modifier vote failed.
