--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,11 +55,13 @@ setting.extremity-pvp.description = Whether the mod should run even if hosting P
   \nPlease note that this setting makes PvP games much more chaotic, and possibly unfair!
 setting.extremity-turrets.name = Turrets Require Coolant
 setting.extremity-turrets.description = Whether turrets require coolant to operate\
-  \nTurrets without coolant will become damaged upon shooting
+  \nTurrets without coolant will become damaged upon shooting\
+  \nDoesn't affect enemy buildings
 setting.extremity-guardian.name = Dangerous Guardians
 setting.extremity-guardian.description = Whether guardian units should give nearby units the shielded status effect
 setting.extremity-enemies.name = Fast Enemies
-setting.extremity-enemies.description = Whether to give all enemy units the fast status effect
+setting.extremity-enemies.description = Whether to give all enemy units the fast status effect\
+  \nAffects all units on PvP games
 setting.extremity-allies.name = Slow Allies
 setting.extremity-allies.description = Whether to give all allied units the slow status effect\
   \nDisabled on PvP games
@@ -73,14 +75,18 @@ setting.extremity-explosions.description = Whether to simulate turret explosions
 setting.extremity-cores.name = Vulnerable Cores
 setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core
 setting.extremity-weather.name = Weather Interactions
-setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding if wet
+setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding if wet\
+  \nDoesn't affect enemies and units spawned by cores
 setting.extremity-buildings.name = Weather Affects Buildings
-setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings
+setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings\
+  \nDoesn't affect enemy buildings
 setting.extremity-damage.name = Weather Damages Buildings
 setting.extremity-damage.description = Whether certain interactions should damage buildings\
+  \nDoesn't affect enemy buildings\
   \nDisabled on PvP games
 setting.extremity-bullets.name = Scaled Bullets
-setting.extremity-bullets.description = Whether to change the damage output of a bullet based on it's remaining lifetime
+setting.extremity-bullets.description = Whether to change the damage output of a bullet based on it's remaining lifetime\
+  \nDoesn't affect enemy bullets
 setting.extremity-invasions.name = Extra Invasions
 setting.extremity-invasions.description = Whether to make enemy factions extra aggressive in the campaign\
   \nPlease note that this setting may have unintended behavior in certain scenarios
