dedicated server notifications

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,3 @@
-# None of these messages are sent over the network, instead, the client running the mod fetches them if needed
 # Error messages used by the networking code
 extremity-outdated = [scarlet]A player with newer version of Extremity has joined, consider updating to avoid issues! [lightgray](Yours: [orange]v@[], Theirs: [orange]v@[])
 extremity-error = [scarlet]Your Extremity version does not match the host's version, issues may occur! [lightgray](Yours: [orange]v@[], Theirs: [orange]v@[])
@@ -10,9 +9,17 @@ extremity-success = [lime]Received new Extremity setting data from the host, app
 extremity-welcome = [accent]Hi there!\
   \nThis is a reminder that Extremity's custom difficulty settings may be active\
   \nHead to the settings if you wish to change the config / disable Extremity
+
+# Welcome message sent to players without the mod
 net.extremity-welcome = [accent]Welcome!\
   \n[lightgray]The host's running [scarlet]Extremity[], a difficulty enhancing mod by [green]W[orange]M[brown]F[][][]!\
   \nConsider installing the mod to reduce certain desyncs!
+
+# Network reminders
+net.extremity-active = [accent][Extremity][]: [lightgray]Reminder - the mod's difficulty scaling and modifiers may be active\
+  \nCheck current settings using [lime]/difficulty[] and [lime]/modifiers
+net.extremity-modifiers = [accent][Extremity][]: [lightgray]Reminder - certain modifiers may be active\
+  \nCheck current modifier status using [lime]/modifiers
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
@@ -98,8 +105,8 @@ setting.extremity-rows.description = Sets the amount of entry rows in the Unitde
   \nChanging this setting may cause minor ui clipping issues
 
 # List UI
-list.extremity-modifiers-begin = --- [ [accent]Modifiers[] ] ---
-list.extremity-modifiers-end = --- [ Page @/@ ] ---
+list.extremity-modifiers.begin = --- [ [accent]Modifiers[] ] ---
+list.extremity-modifiers.end = --- [ Page @/@ ] ---
 
 # Command feedback
 cmd.extremity-difficulty = [accent][Extremity][]: Current difficulty scale is @
