--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -21,6 +21,10 @@ net.extremity-active = [accent][Extremity][]: [lightgray]Reminder - the mod's di
 net.extremity-modifiers = [accent][Extremity][]: [lightgray]Reminder - certain modifiers may be active\
   \nCheck current modifier status using [lime]/modifiers
 
+# Map related stuff
+map.extremity-unitdex = The current map appears to have a custom unitdex saved within the rules\
+  \n\nWould you like to switch to said unitdex for the current game?
+
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Welcome to Extremity![]\
   \n\nThis mod attempts to make Mindustry [scarlet]harder[] without modifying or adding any content, instead, it runs custom behavior code on various events.\
@@ -124,13 +128,13 @@ con.extremity-applied = Applied new unitdex
 vote.extremity-ongoing = [accent][Extremity][]:[scarlet] A vote is already in progress, please wait before it finishes!
 vote.extremity-no-session = [accent][Extremity][]:[scarlet] No vote session ongoing, please start one before voting!
 vote.extremity-denied = [accent][Extremity][]:[scarlet] You have already voted!
-vote.extremity-time.difficulty = [accent][Extremity][]: @ seconds remaining!\nVote using /diffvote (y/n)
+vote.extremity-time.difficulty = [accent][Extremity][]: @ seconds remaining!\nVote using /difficulty (y/n)
 vote.extremity-invalid.difficulty = [accent][Extremity][]:[scarlet] Invalid parameter, please type /difficulty <0-10> to start a vote or <yes/y>/<no/n> to vote!
 vote.extremity-cancelled.difficulty = [accent][Extremity][]: Initiator has cancelled the difficulty vote.
 vote.extremity-cancelled-admin.difficulty = [accent][Extremity][]: Difficulty vote was cancelled by @
 vote.extremity-skip.difficulty = [accent][Extremity][]: Difficulty vote force-passed by @
-vote.extremity-voted.difficulty = @ [white] voted [lime]in favor of[] changing the difficulty scale to @ (@/@)\nVote using /diffvote (y/n)
-vote.extremity-voted-against.difficulty = @ [white] voted [scarlet]against[] changing the difficulty scale to @ (@/@)\nVote using /diffvote (y/n)
+vote.extremity-voted.difficulty = @ [white] voted [lime]in favor of[] changing the difficulty scale to @ (@/@)\nVote using /difficulty (y/n)
+vote.extremity-voted-against.difficulty = @ [white] voted [scarlet]against[] changing the difficulty scale to @ (@/@)\nVote using /difficulty (y/n)
 vote.extremity-success.difficulty = [accent][Extremity][]: Difficultly change vote passed, setting difficulty scale to @!
 vote.extremity-fail.difficulty = [accent][Extremity][]: Difficulty change vote failed.
 vote.extremity-time.modifier = [accent][Extremity][]: @ seconds remaining!\nVote using /modifier (y/n)
