--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,19 +6,19 @@ extremity-error = [scarlet]Your Extremity version does not match the host's vers
 extremity-success = [lime]Received new Extremity setting data from the host, applying!
 
 # A welcome message for the host, sent when the world is loaded
-extremity-welcome = [accent]Hi there!\
+extremity-welcome = [stat]Hi there!\
   \nThis is a reminder that Extremity's custom difficulty settings may be active\
   \nHead to the settings if you wish to change the config / disable Extremity
 
 # Welcome message sent to players without the mod
-net.extremity-welcome = [accent]Welcome!\
+net.extremity-welcome = [stat]Welcome!\
   \n[lightgray]The host's running [scarlet]Extremity[], a difficulty enhancing mod by [green]W[orange]M[brown]F[][][]!\
   \nConsider installing the mod to reduce certain desyncs!
 
 # Network reminders
-net.extremity-active = [accent][Extremity][]: [lightgray]Reminder - the mod's difficulty scaling and modifiers may be active\
+net.extremity-active = [stat][Extremity][]: [lightgray]Reminder - the mod's difficulty scaling and modifiers may be active\
   \nCheck current settings using [lime]/difficulty[] and [lime]/modifiers
-net.extremity-modifiers = [accent][Extremity][]: [lightgray]Reminder - certain modifiers may be active\
+net.extremity-modifiers = [stat][Extremity][]: [lightgray]Reminder - certain modifiers may be active\
   \nCheck current modifier status using [lime]/modifiers
 
 # Map related stuff
@@ -26,11 +26,11 @@ map.extremity-unitdex = The current map appears to have a custom unitdex saved w
   \n\nWould you like to switch to said unitdex for the current game?
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
-extremity-info = [accent]Welcome to Extremity![]\
+extremity-info = [stat]Welcome to Extremity![]\
   \n\nThis mod attempts to make Mindustry [scarlet]harder[] without modifying or adding any content, instead, it runs custom behavior code on various events.\
-  \n\nPlease note that [accent]Extremity[] is a bit on the heavier side of mods, therefore a decent device is recommended in order to play.\
+  \n\nPlease note that [stat]Extremity[] is a bit on the heavier side of mods, therefore a decent device is recommended in order to play.\
   \nWeak devices may experience performance issues, bugs or even crashes!\
-  \n\nHead over to the settings in order to set [accent]Extremity[] up, good luck!
+  \n\nHead over to the settings in order to set [stat]Extremity[] up, good luck!
 
 # Buttons
 extremity-load = Load
@@ -67,7 +67,7 @@ setting.extremity-pvp.description = Whether the mod should run even if hosting P
 setting.extremity-turrets.name = Turrets Require Coolant
 setting.extremity-turrets.description = Whether turrets require coolant to operate\
   \nTurrets without coolant will become damaged upon shooting\
-  \nDoesn't affect enemy buildings
+  \nDoesn't affect AI teams
 setting.extremity-guardian.name = Dangerous Guardians
 setting.extremity-guardian.description = Whether guardian units should give nearby units the shielded status effect
 setting.extremity-enemies.name = Fast Enemies
@@ -79,21 +79,27 @@ setting.extremity-allies.description = Whether to give all allied units the slow
 setting.extremity-campaign.name = Single Life Campaign
 setting.extremity-campaign.description = Whether to reset the campaign progress if a sector is lost
 setting.extremity-campaign.confirm = [scarlet]Caution[], losing a campaign sector while this setting is enabled will cause the entire campaign progress on that planet to be [scarlet]reset[]\
-  \n\n[accent]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
+  \n\n[stat]If you care about your save a lot, export a backup from within the game's settings or disable the setting![]\
   \n\n[scarlet]Be aware that this option disregards the difficulty level, therefore it works even if the mod's set to vanilla.
 setting.extremity-explosions.name = Enhanced Turret Explosions
 setting.extremity-explosions.description = Whether to simulate turret explosions the same way inventory-based buildings have it done
 setting.extremity-cores.name = Vulnerable Cores
 setting.extremity-cores.description = Whether to kill ALL other alive cores upon the death of a single core
+setting.extremity-taken.name = Vulnerable Buildings
+setting.extremity-taken.description = Whether to kill ALL cores if a teams building gets damaged\
+  \nDoesn't affect AI teams
+setting.extremity-units.name = Vulnerable Units
+setting.extremity-units.description = Whether to kill ALL cores if a teams unit gets damaged\
+  \nDoesn't affect AI teams
 setting.extremity-weather.name = Weather Interactions
 setting.extremity-weather.description = Whether to enable interactions between the world and the weather, such as units corroding if wet\
-  \nDoesn't affect enemies and units spawned by cores
+  \nDoesn't affect AI teams and units spawned by cores
 setting.extremity-buildings.name = Weather Affects Buildings
 setting.extremity-buildings.description = Whether to expand the interactions to also affect buildings\
-  \nDoesn't affect enemy buildings
+  \nDoesn't affect AI teams
 setting.extremity-damage.name = Weather Damages Buildings
 setting.extremity-damage.description = Whether certain interactions should damage buildings\
-  \nDoesn't affect enemy buildings\
+  \nDoesn't affect AI teams\
   \nDisabled on PvP games
 setting.extremity-bullets.name = Scaled Bullets
 setting.extremity-bullets.description = Whether to change the damage output of a bullet based on it's remaining lifetime\
@@ -109,15 +115,17 @@ setting.extremity-rows.description = Sets the amount of entry rows in the Unitde
   \nChanging this setting may cause minor ui clipping issues
 
 # List UI
-list.extremity-modifiers.begin = --- [ [accent]Modifiers[] ] ---
+list.extremity-modifiers.begin = --- [ [stat]Modifiers[] ] ---
 list.extremity-modifiers.end = --- [ Page @/@ ] ---
 
 # Command feedback
-cmd.extremity-difficulty = [accent][Extremity][]: Current difficulty scale is @
-cmd.extremity-insufficient = [accent][Extremity][]:[scarlet] Insufficient permissions.
-cmd.extremity-reset = [accent][Extremity][]: Reset unitdex to default values!
-cmd.extremity-submitted = [accent][Extremity][]: Submitted new unitdex!
-cmd.extremity-ready = [[accent][Extremity][]: Saved unitdex data in cache\nType [accent]/unitdex submit[] to apply when ready!
+cmd.extremity-difficulty = [stat][Extremity][]: Current difficulty scale is @
+cmd.extremity-difficulty.locked = [stat][Extremity][]:[scarlet] Current map rules do not allow difficulty changes.
+cmd.extremity-modifier.locked = [stat][Extremity][]:[scarlet] Current map rules do not allow modifier changes.
+cmd.extremity-insufficient = [stat][Extremity][]:[scarlet] Insufficient permissions.
+cmd.extremity-reset = [stat][Extremity][]: Reset unitdex to default values!
+cmd.extremity-submitted = [stat][Extremity][]: Submitted new unitdex!
+cmd.extremity-ready = [stat][Extremity][]: Saved unitdex data in cache\nType [stat]/unitdex submit[] to apply when ready!
 
 # Console feedback
 con.extremity-difficulty = Current difficulty scale is @
@@ -125,27 +133,27 @@ con.extremity-difficulty-set = Set difficulty scale to @
 con.extremity-applied = Applied new unitdex
 
 # Vote feedback
-vote.extremity-ongoing = [accent][Extremity][]:[scarlet] A vote is already in progress, please wait before it finishes!
-vote.extremity-no-session = [accent][Extremity][]:[scarlet] No vote session ongoing, please start one before voting!
-vote.extremity-denied = [accent][Extremity][]:[scarlet] You have already voted!
-vote.extremity-time.difficulty = [accent][Extremity][]: @ seconds remaining!\nVote using /difficulty (y/n)
-vote.extremity-invalid.difficulty = [accent][Extremity][]:[scarlet] Invalid parameter, please type /difficulty <0-10> to start a vote or <yes/y>/<no/n> to vote!
-vote.extremity-cancelled.difficulty = [accent][Extremity][]: Initiator has cancelled the difficulty vote.
-vote.extremity-cancelled-admin.difficulty = [accent][Extremity][]: Difficulty vote was cancelled by @
-vote.extremity-skip.difficulty = [accent][Extremity][]: Difficulty vote force-passed by @
+vote.extremity-ongoing = [stat][Extremity][]:[scarlet] A vote is already in progress, please wait before it finishes!
+vote.extremity-no-session = [stat][Extremity][]:[scarlet] No vote session ongoing, please start one before voting!
+vote.extremity-denied = [stat][Extremity][]:[scarlet] You have already voted!
+vote.extremity-time.difficulty = [stat][Extremity][]: @ seconds remaining!\nVote using /difficulty (y/n)
+vote.extremity-invalid.difficulty = [stat][Extremity][]:[scarlet] Invalid parameter, please type /difficulty <0-10> to start a vote or <yes/y>/<no/n> to vote!
+vote.extremity-cancelled.difficulty = [stat][Extremity][]: Initiator has cancelled the difficulty vote.
+vote.extremity-cancelled-admin.difficulty = [stat][Extremity][]: Difficulty vote was cancelled by @
+vote.extremity-skip.difficulty = [stat][Extremity][]: Difficulty vote force-passed by @
 vote.extremity-voted.difficulty = @ [white] voted [lime]in favor of[] changing the difficulty scale to @ (@/@)\nVote using /difficulty (y/n)
 vote.extremity-voted-against.difficulty = @ [white] voted [scarlet]against[] changing the difficulty scale to @ (@/@)\nVote using /difficulty (y/n)
-vote.extremity-success.difficulty = [accent][Extremity][]: Difficultly change vote passed, setting difficulty scale to @!
-vote.extremity-fail.difficulty = [accent][Extremity][]: Difficulty change vote failed.
-vote.extremity-time.modifier = [accent][Extremity][]: @ seconds remaining!\nVote using /modifier (y/n)
-vote.extremity-invalid.modifier = [accent][Extremity][]:[scarlet] Invalid parameter, please type /modifier (yes/y / no/n) in order to vote!
-vote.extremity-cancelled.modifier = [accent][Extremity][]: Initiator has cancelled the modifier vote.
-vote.extremity-cancelled-admin.modifier = [accent][Extremity][]: Modifier vote was cancelled by @
-vote.extremity-skip.modifier = [accent][Extremity][]: Modifier vote force-passed by @
-vote.extremity-voted.modifier = @ [white] voted [lime]in favor of[] enabling [accent]@[] (@/@)\nVote using /modifier (y/n)
-vote.extremity-voted.modifier-disable = @ [white] voted [lime]in favor of[] disabling [accent]@[] (@/@)\nVote using /modifier (y/n)
-vote.extremity-voted-against.modifier = @ [white] voted [scarlet]against[] enabling [accent]@[] (@/@)\nVote using /modifier (y/n)
-vote.extremity-voted-against.modifier-disable = @ [white] voted [scarlet]against[] disabling [accent]@[] (@/@)\nVote using /modifier (y/n)
-vote.extremity-success.modifier-enable = [accent][Extremity][]: Modifier vote passed, enabling [accent]@[]!
-vote.extremity-success.modifier-disable = [accent][Extremity][]: Modifier vote passed, disabling [accent]@[]!
-vote.extremity-fail.modifier = [accent][Extremity][]: Modifier vote failed.
+vote.extremity-success.difficulty = [stat][Extremity][]: Difficultly change vote passed, setting difficulty scale to @!
+vote.extremity-fail.difficulty = [stat][Extremity][]: Difficulty change vote failed.
+vote.extremity-time.modifier = [stat][Extremity][]: @ seconds remaining!\nVote using /modifier (y/n)
+vote.extremity-invalid.modifier = [stat][Extremity][]:[scarlet] Invalid parameter, please type /modifier (yes/y / no/n) in order to vote!
+vote.extremity-cancelled.modifier = [stat][Extremity][]: Initiator has cancelled the modifier vote.
+vote.extremity-cancelled-admin.modifier = [stat][Extremity][]: Modifier vote was cancelled by @
+vote.extremity-skip.modifier = [stat][Extremity][]: Modifier vote force-passed by @
+vote.extremity-voted.modifier = @ [white] voted [lime]in favor of[] enabling [stat]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted.modifier-disable = @ [white] voted [lime]in favor of[] disabling [stat]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted-against.modifier = @ [white] voted [scarlet]against[] enabling [stat]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-voted-against.modifier-disable = @ [white] voted [scarlet]against[] disabling [stat]@[] (@/@)\nVote using /modifier (y/n)
+vote.extremity-success.modifier-enable = [stat][Extremity][]: Modifier vote passed, enabling [stat]@[]!
+vote.extremity-success.modifier-disable = [stat][Extremity][]: Modifier vote passed, disabling [stat]@[]!
+vote.extremity-fail.modifier = [stat][Extremity][]: Modifier vote failed.
